--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs_database_migrator",
+  "name": "migratify",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,6 @@
     "mysql2": "^3.1.2"
   },
   "bin": {
-    "ndm": "./index.js"
+    "migratify": "./index.js"
   }
 }
