--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "msnodesqlv8": "^4.5.0",
+    "mssql": "^11.0.1",
     "mysql2": "^3.1.2"
   },
   "bin": {
